--- a/Projects/fearless/src/frontend/src/app/home/home.component.html
+++ b/Projects/fearless/src/frontend/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<p>你好，{{finalUserInfo.nickname}}.</p>
+<p>你好，{{finalUserInfo.nickname}}. <a [routerLink]="'/editAccount?from='+from">修改个人信息</a></p>
 <p><a routerLink="/singleChat">开始聊天吧！</a></p>
