--- a/Projects/fearless/src/frontend/src/app/edit-my-info/edit-my-info.component.html
+++ b/Projects/fearless/src/frontend/src/app/edit-my-info/edit-my-info.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
     <label>
         Nickname:
-        <input formControlName="nickname" type="text" />
+        <input formControlName="nickname" [placeholder]="finalUserInfo.nickname" type="text" />
     </label>
     <label>
         Portrait URI:
-        <input formControlName="portraitUri" type="text" />
+        <input formControlName="portraitUri" [placeholder]="finalUserInfo.portraitUri" type="text" />
     </label>
     <button type="submit" [disabled]="!infoForm.valid">Submit</button>
 </form>
