--- a/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
+++ b/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
@@ -7,7 +7,7 @@
             <tr><td>Name: </td><td>{{curUserInfo.nickname}}</td></tr>
             <tr><td>Portrait URI: </td><td>{{curUserInfo.portraitUri}}</td></tr>
             <tr><td>Is Admin: </td><td>{{curUserInfo.isAdmin}}</td></tr>
-            <tr><td colspan="2">Edit This Profile</td></tr>
+            <tr><td colspan="2"><a [routerLink]="['/editInfo', curUserInfo.userID, {from: from}]">Edit This Profile</a></td></tr>
         </tbody>
     </table>
 </ng-template>
