--- a/Projects/MAXFLOAT/AnimailHome/AnimailHome/RongRtcVideo/RtcListVC/RtcLiveListCell.xib
+++ b/Projects/MAXFLOAT/AnimailHome/AnimailHome/RongRtcVideo/RtcListVC/RtcLiveListCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RtcLiveListCell" customModule="AnimailHome" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="item" id="gTV-IL-0wX" customClass="RtcLiveListCell" customModule="AnimailHome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="212" height="282"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
