--- a/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
+++ b/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
@@ -12,6 +12,7 @@
                 <ul>
                     <li><a [routerLink]="['/editInfo', curUserInfo.userID, {from: from}]">Edit This Profile</a></li>
                     <li><a (click)="curUserInfo.relation == 1 ? changeRelation(0) : changeRelation(1)">{{curUserInfo.relation == 1 ? 'Unfriend' : 'Add as a friend'}}</a></li>
+                    <li><a (click)="curUserInfo.relation == -1 ? changeRelation(0) : changeRelation(-1)">{{curUserInfo.relation == -1 ? 'Remove from Blacklist' : 'Add to the Blacklist'}}</a></li>
                 </ul>
                 </td>
             </tr>
