material integration && chat messages api

--- a/Projects/fearless/src/frontend/src/app/app.component.html
+++ b/Projects/fearless/src/frontend/src/app/app.component.html
@@ -1,1 +1,28 @@
+<mat-toolbar>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" [matMenuTriggerFor]="menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item><a [routerLink]="['/editInfo', {from: from}]">修改个人信息</a></button>
+        <button *ngIf="finalUserInfo && finalUserInfo.isAdmin" mat-menu-item><a routerLink="/userList">查看用户列表</a></button>
+    </mat-menu>
+
+    <a [routerLink]="['/']">{{title}}</a>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>share</mat-icon>
+    </button>
+</mat-toolbar> 
+<div class='content'>
 <router-outlet></router-outlet>
+</div>
+<div class='footer'>
+  <mat-card>
+    <mat-card-content>
+      融云 2020. App made by <a href="https://snorl.ax">Sim</a>
+    </mat-card-content>
+  </mat-card>
+</div>
