--- a/Projects/fearless/src/frontend/src/app/home/home.component.html
+++ b/Projects/fearless/src/frontend/src/app/home/home.component.html
@@ -1,7 +1,10 @@
-<div>你好，{{finalUserInfo.nickname}}. 
+
+<!-- <div>你好，{{finalUserInfo.nickname}}. 
     <ul>
         <li><a [routerLink]="['/editInfo', {from: from}]">修改个人信息</a></li>
         <li *ngIf="finalUserInfo.isAdmin"><a routerLink="/userList">查看用户列表</a></li>
     </ul>
 </div>
-<p><a routerLink="/singleChat">开始聊天吧！</a></p>
+<p><a routerLink="/singleChat">开始聊天吧！</a></p> -->
+
+首页
