--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -1,1 +1,80 @@
 /* You can add global styles to this file, and also import other style files */
+.example-spacer
+    flex 1 1 auto
+.content, .footer
+    padding 1em
+.footer
+    position fixed
+    bottom 0
+    width calc(100% - 3em)
+    text-align center
+
+.mat-card-header
+    .mat-card-title
+        margin-top 12px
+
+.mat-card-content
+    padding 4px 16px 0
+
+.mat-card-actions
+    text-align right
+    padding 0 16px!important
+
+.mat-table
+    width 100%
+
+.mat-form-field
+    width 100%
+
+.mat-toolbar-single-row, .mat-menu-item
+    a
+        color inherit
+        text-decoration none
+
+.mat-grid-tile
+    .mat-grid-tile-header
+        width 100%
+        position relative!important
+    .mat-figure 
+        justify-content flex-start!important
+        align-items baseline!important
+        flex-direction column
+
+.mat-list-container, .conversationList
+    width 100%
+    height 100%
+    overflow auto
+
+.mat-list-container
+    .mat-list-item
+        padding 1em 0!important
+    .timeline
+        margin-left auto
+        margin-right 0
+    .convPre
+        overflow hidden
+        text-overflow ellipsis
+        max-width 100%
+        padding 0 1em
+
+.mat-list-base
+    width 100%
+
+.messageForm
+    width 100%
+    .mat-form-field-infix
+        display flex
+        flex-direction row
+
+.conversationList
+    .mat-card
+        margin 1em
+        .mat-card-content
+            padding 0
+    .mat-card-title
+        display inline-block
+        margin-right 1em
+    .mat-card-subtitle
+        display inline-block
+    .mat-card-avatar
+        overflow hidden
