--- a/Projects/fearless/src/frontend/src/app/edit-my-info/edit-my-info.component.html
+++ b/Projects/fearless/src/frontend/src/app/edit-my-info/edit-my-info.component.html
@@ -1,11 +1,27 @@
-<form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
-    <label>
-        Nickname:
-        <input formControlName="nickname" [placeholder]="finalUserInfo.nickname" type="text" />
-    </label>
-    <label>
-        Portrait URI:
-        <input formControlName="portraitUri" [placeholder]="finalUserInfo.portraitUri" type="text" />
-    </label>
-    <button type="submit" [disabled]="!infoForm.valid">Submit</button>
-</form>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>编辑个人信息</mat-card-title>
+    </mat-card-header>
+    <form [formGroup]="infoForm" (ngSubmit)="onSubmit()">
+    <mat-card-content>
+            <mat-form-field>
+                <mat-label>昵称</mat-label>
+                <input matInput formControlName="nickname" [value]="finalUserInfo().nickname" type="text">
+                <mat-error *ngIf="hasErr('nickname')">
+                  {{hasErr('nickname')}}
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>头像地址</mat-label>
+                <input matInput formControlName="portraitUri" [value]="finalUserInfo().portraitUri" type="text">
+                <mat-error *ngIf="hasErr('portraitUri')">
+                  {{hasErr('portraitUri')}}
+                </mat-error>
+            </mat-form-field>
+        
+    </mat-card-content>
+    <mat-card-actions>
+        <button type="submit" [disabled]="!infoForm.valid" mat-button>Submit</button>
+    </mat-card-actions>
+    </form>
+</mat-card>
