--- a/Projects/fearless/src/frontend/src/app/login/login.component.html
+++ b/Projects/fearless/src/frontend/src/app/login/login.component.html
@@ -1,19 +1,27 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <label>
-        User ID:
-        <input type="text" formControlName="userId">
-    </label>
-    <!-- <label>
-        Nickname:
-        <input type="text" formControlName="name">
-    </label>
-    <label>
-        Avatar URI:
-        <input type="text" formControlName="portraitUri">
-    </label> -->
-    <label>
-        Password:
-        <input type="password" formControlName="password">
-    </label>
-    <button type="submit" [disabled]="!loginForm.valid">Submit</button>
-</form>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>登陆帐号</mat-card-title>
+    </mat-card-header>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-card-content>
+            <mat-form-field>
+                <mat-label>User ID</mat-label>
+                <input matInput type="text" formControlName="userId">
+                <mat-error *ngIf="hasErr('userId')">
+                  {{hasErr('userId')}}
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>密码</mat-label>
+                <input matInput type="password" formControlName="password">
+                <mat-error *ngIf="hasErr('password')">
+                  {{hasErr('password')}}
+                </mat-error>
+            </mat-form-field>
+        
+    </mat-card-content>
+    <mat-card-actions>
+        <button type="submit" [disabled]="!loginForm.valid" mat-button>Submit</button>
+    </mat-card-actions>
+    </form>
+</mat-card>
