--- a/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
+++ b/Projects/fearless/src/frontend/src/app/user-list-profile/user-list-profile.component.html
@@ -2,22 +2,24 @@
     {{err}}
 </div>
 <ng-template #user>
-    <table>
-        <tbody>
-            <tr><td>Name: </td><td>{{curUserInfo.nickname}}</td></tr>
-            <tr><td>Portrait URI: </td><td>{{curUserInfo.portraitUri}}</td></tr>
-            <tr><td>Is Admin: </td><td>{{curUserInfo.isAdmin}}</td></tr>
-            <tr>
-                <td colspan="2">
-                <ul>
-                    <li><a [routerLink]="['/editInfo', curUserInfo.userID, {from: from}]">Edit This Profile</a></li>
-                    <li><a (click)="curUserInfo.relation == 1 ? changeRelation(0) : changeRelation(1)">{{curUserInfo.relation == 1 ? 'Unfriend' : 'Add as a friend'}}</a></li>
-                    <li *ngIf="curUserInfo.relation == 1"><a [routerLink]="['/singleChat', {chat: curUserInfo.userID}]">Start Chatting</a></li>
-                    <li><a (click)="curUserInfo.relation == -1 ? changeRelation(0) : changeRelation(-1)">{{curUserInfo.relation == -1 ? 'Remove from Blacklist' : 'Add to the Blacklist'}}</a></li>
-                </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{curUserInfo.nickname}}的个人资料</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <table>
+                <tbody>
+                    <tr><td>Name: </td><td>{{curUserInfo.nickname}}</td></tr>
+                    <tr><td>Portrait URI: </td><td>{{curUserInfo.portraitUri}}</td></tr>
+                    <tr><td>Is Admin: </td><td>{{curUserInfo.isAdmin}}</td></tr>
+                </tbody>
+            </table>
+        </mat-card-content>
+        <mat-card-actions>
+            <button *ngIf="finalUserInfo().isAdmin || finalUserInfo().userID == curUserInfo.userID" [routerLink]="finalUserInfo().userID == curUserInfo.userID ? ['/editInfo', {from: from}] : ['/editInfo', curUserInfo.userID, {from: from}]" mat-button>编辑</button>
+            <button (click)="curUserInfo.relation == 1 ? changeRelation(0) : changeRelation(1)" mat-button>{{curUserInfo.relation == 1 ? '解除好友关系' : '加为好友'}}</button>
+            <button *ngIf="curUserInfo.relation == 1" [routerLink]="['/singleChat', {chat: curUserInfo.userID}]" mat-button>开始聊天</button>
+            <button (click)="curUserInfo.relation == -1 ? changeRelation(0) : changeRelation(-1)" mat-button>{{curUserInfo.relation == -1 ? '从黑名单中移除' : '加入黑名单'}}</button>
+        </mat-card-actions>
+    </mat-card>    
 </ng-template>
-
