--- a/Projects/fearless/src/frontend/src/app/user-list/user-list.component.html
+++ b/Projects/fearless/src/frontend/src/app/user-list/user-list.component.html
@@ -1,10 +1,27 @@
-<div *ngIf="finalUserInfo.isAdmin else regular">
-    <p>hello admin {{finalUserInfo.nickname}}!</p>
-    <table>
-        <tbody>
-            <tr><td>user ID</td><td>Nickname</td><td>is admin</td><td>Profile</td></tr>
-            <tr *ngFor="let user of userList"><td>{{user.UserID}}</td><td>{{user.Nickname}}</td><td>{{user.IsAdmin}}</td><td><a [routerLink]='["/userList", user.UserID]'>See Profile</a></td></tr>
-        </tbody>
-    </table>
-</div>
-<ng-template #regular>Hello {{finalUserInfo.nickname}}!</ng-template>
+<table mat-table [dataSource]="userList" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="userId">
+      <th mat-header-cell *matHeaderCellDef> User ID </th>
+      <td mat-cell *matCellDef="let user"> {{user.UserID}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="nickname">
+      <th mat-header-cell *matHeaderCellDef> 昵称 </th>
+      <td mat-cell *matCellDef="let user"> {{user.Nickname}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="isAdmin">
+      <th mat-header-cell *matHeaderCellDef> 是管理员 </th>
+      <td mat-cell *matCellDef="let user"> {{user.IsAdmin ? '是' : '否'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="profileLink">
+      <th mat-header-cell *matHeaderCellDef> 查看资料 </th>
+      <td mat-cell *matCellDef="let user"> <a [routerLink]='["/userList", user.UserID]'>查看</a> </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+  
+  
