--- a/Projects/fearless/src/frontend/src/app/login/login.component.html
+++ b/Projects/fearless/src/frontend/src/app/login/login.component.html
@@ -21,7 +21,7 @@
         
     </mat-card-content>
     <mat-card-actions>
-        <button type="submit" [disabled]="!loginForm.valid" mat-button>Submit</button>
+        <button type="submit" [disabled]="!loginForm.valid" mat-button>提交</button>
     </mat-card-actions>
     </form>
 </mat-card>
