--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -26,7 +26,7 @@
 .mat-form-field
     width 100%
 
-.mat-toolbar-single-row, .mat-menu-item
+.mat-toolbar-single-row, .mat-menu-content
     a
         color inherit
         text-decoration none
