--- a/Projects/不败意志战队/public/sass/index.scss
+++ b/Projects/不败意志战队/public/sass/index.scss
@@ -10,6 +10,9 @@ body {
   width: 100%;
   height: 100%;
   background: url(../img/backgromd.png) repeat-x;
+
+  // background-image: linear-gradient(hotpink, yellowgreen);
+
   overflow: hidden;
 
   display: flex;
@@ -29,6 +32,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(135deg,#f6ac8a, #b5d6e8)  ;
 
   .join {
     display: flex;
