--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -55,6 +55,7 @@
         overflow hidden
         text-overflow ellipsis
         max-width 100%
+        max-height 3em
         padding 0 1em
 
 .mat-list-base
