--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -72,6 +72,8 @@
         margin 1em
         .mat-card-content
             padding 0
+            img
+                width 98%
     .mat-card-title
         display inline-block
         margin-right 1em
@@ -79,3 +81,6 @@
         display inline-block
     .mat-card-avatar
         overflow hidden
+
+.clickable
+    cursor pointer
