--- a/Projects/fearless/src/frontend/src/app/app.component.html
+++ b/Projects/fearless/src/frontend/src/app/app.component.html
@@ -9,6 +9,7 @@
       </ng-template>
       <ng-template #guestMenu>
         <a [routerLink]="['/login']"><button mat-menu-item>登陆帐号</button></a>
+        <a [routerLink]="['/register']"><button mat-menu-item>注册帐号</button></a>
       </ng-template>
     </mat-menu>
 
