style change about the image in the chat

--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -73,7 +73,7 @@
         .mat-card-content
             padding 0
             img
-                width 98%
+                max-width: 100%
     .mat-card-title
         display inline-block
         margin-right 1em
