--- a/Projects/fearless/src/frontend/src/styles.styl
+++ b/Projects/fearless/src/frontend/src/styles.styl
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body
+    font-size 0.8vw
+    @media screen and (max-width 1500px)
+        font-size 14px
 .example-spacer
     flex 1 1 auto
 .content, .footer
@@ -40,24 +44,6 @@
         align-items baseline!important
         flex-direction column
 
-.mat-list-container, .conversationList
-    width 100%
-    height 100%
-    overflow auto
-
-.mat-list-container
-    .mat-list-item
-        padding 1em 0!important
-    .timeline
-        margin-left auto
-        margin-right 0
-    .convPre
-        overflow hidden
-        text-overflow ellipsis
-        max-width 100%
-        max-height 3em
-        padding 0 1em
-
 .mat-list-base
     width 100%
 
@@ -68,6 +54,9 @@
         flex-direction row
 
 .conversationList
+    width 100%
+    height calc(100% - 12em)
+    overflow auto
     .mat-card
         margin 1em
         .mat-card-content
@@ -84,3 +73,47 @@
 
 .clickable
     cursor pointer
+
+.chat-window
+    height 100%
+    display flex
+    justify-content space-around
+    .header
+        font-size 1em
+        background #ccc
+        color #ffffff
+        font-weight bold
+        padding 1em 
+    .convList
+        flex-basis 20%
+        @media screen and (max-width 1500px)
+            flex-basis: 100%
+    .convCur
+        flex-basis 77%
+        @media screen and (max-width 1500px)
+            flex-basis: 100%
+        .back
+            display none
+            @media screen and (max-width 1500px)
+                display inline-block
+    .mat-list-container
+        width 100%
+        height calc(100% - 5em)
+        overflow auto
+        .mat-list-item
+            padding 1em 0!important
+        .timeline
+            margin-left auto
+            margin-right 0
+        .convPre
+            overflow hidden
+            text-overflow ellipsis
+            max-width 100%
+            max-height 3em
+            padding 0 1em
+
+.content
+    height calc(100% - 10em)
+
+.mat-app-background
+    height calc(100vh - 16px)
